force-app/main/default/objects/Grant_Funding_Priority__c/Grant_Funding_Priority__c.object-meta.xml
<CustomObject>
    <label>Grant Funding Priority</label>
    <nameField>
        <displayFormat>Grant Priority-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Funding Priorities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>