force-app/main/default/objects/Grant_Funding_Priority__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <referenceTo>Priority__c</referenceTo>
    <relationshipLabel>Grant Funding Priorities</relationshipLabel>
    <relationshipName>Grant_Funding_Priorities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>