force-app/main/default/objects/Grant_Funding_Priority__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Stages</label>
    <type>Text</type>
</CustomField>