force-app/main/default/objects/Grant_Funding_Priority__c/listViews/Prospecting_Grants.listView-meta.xml
<ListView>
    <fullName>Prospecting_Grants</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stages__c</field>
        <operation>contains</operation>
        <value>Prospecting</value>
    </filters>
    <label>Prospecting Grants</label>
</ListView>